--- a/config.yaml
+++ b/config.yaml
@@ -69,10 +69,10 @@ monitors:
     expectStatus: 200
     linkable: false # allows the title to be a link, default=true
 
-  - id: Argo-Tunnel-4
-    name: Argo Tunnel 4 (Neon) 
-    description: 'Argo Tunnel 4'
-    url: 'https://at4.goonernet.work/'
-    method: GET
-    expectStatus: 200
-    linkable: false # allows the title to be a link, default=true
+#  - id: Argo-Tunnel-4
+#    name: Argo Tunnel 4 (Neon) 
+#    description: 'Argo Tunnel 4'
+#    url: 'https://at4.goonernet.work/'
+#    method: GET
+#    expectStatus: 200
+#    linkable: false # allows the title to be a link, default=true
