--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 settings:
-  title: 'Gooner Network Status'
+  title: 'wankmonkey.net • Network Status'
   url: 'https://ops-status.goonernet.work' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
-  daysInHistogram: 60 # number of days you want to display in histogram
+  daysInHistogram: 30 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
 
   allmonitorsOperational: 'All Systems Operational'
@@ -24,34 +24,22 @@ monitors:
     followRedirect: false # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
 
-#  - id: www-cloudflare-com
-#    name: www.cloudflare.com
-#    description: 'Built for anything connected to the Internet.'
-#   url: 'https://www.cloudflare.com/'
-#    method: GET
-#    expectStatus: 200
-#    linkable: true # allows the title to be a link, default=true
-
-#  - id: blog-cloudflare-com
-#    name: The Cloudflare Blog
-#    url: 'https://blog.cloudflare.com/'
-#    method: GET
-  
   - id: jerryflynn-demondad-xyz
-    name: Jerry Flynn 
+    name: Jerry Flynn Retiring Soon
     description: 'Jerry Flynn the Jellyfin'
     url: 'https://jerryflynn.demondad.xyz/health/'
     method: GET
     expectStatus: 200
     linkable: false # allows the title to be a link, default=true
     
-#  - id: Argo-Tunnel-1
-#    name: Argo Tunnel 1 (Cletus)
-#    description: 'Argo Tunnel 1'
-#    url: 'https://at1.goonernet.work/'
-#    method: GET
-#    expectStatus: 200
-#    linkable: false # allows the title to be a link, default=true
+  - id: jerryflynn-wankmonkey-net
+    name: Jerry Flynn Sr. 
+    description: 'Jerry Flynn Sr. the Jellyfin'
+    url: 'https://jerryflynn.wankmonkey.net/health/'
+    method: GET
+    expectStatus: 200
+    linkable: false # allows the title to be a link, default=true
+
 
   - id: Argo-Tunnel-2
     name: Argo Tunnel 2 (Kub)
@@ -68,11 +56,3 @@ monitors:
     method: GET
     expectStatus: 200
     linkable: false # allows the title to be a link, default=true
-
-#  - id: Argo-Tunnel-4
-#    name: Argo Tunnel 4 (Neon) 
-#    description: 'Argo Tunnel 4'
-#    url: 'https://at4.goonernet.work/'
-#    method: GET
-#    expectStatus: 200
-#    linkable: false # allows the title to be a link, default=true
