--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 settings:
   title: 'wankmonkey.net • Network Status'
-  url: 'https://ops-status.goonernet.work' # used for Slack messages
+  url: 'https://ops-status.nerdperv.net' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 30 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
@@ -24,27 +24,18 @@ monitors:
     followRedirect: false # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
 
-  - id: jerryflynn-demondad-xyz
-    name: Jerry Flynn Retiring Soon
+  - id: jerryflynn-wankmonkey-net
+    name: Jerry Flynn 
     description: 'Jerry Flynn the Jellyfin'
-    url: 'https://jerryflynn.demondad.xyz/health/'
+    url: 'https://jerryflynn.wankmonkey.net/health/'
     method: GET
     expectStatus: 200
     linkable: false # allows the title to be a link, default=true
-    
-  - id: jerryflynn-wankmonkey-net
-    name: Jerry Flynn Sr. 
-    description: 'Jerry Flynn Sr. the Jellyfin'
-    url: 'https://jerryflynn.wankmonkey.net/health/'
-    method: GET
-    expectStatus: 404
-    linkable: false # allows the title to be a link, default=true
 
-
-  - id: Argo-Tunnel-2
-    name: Argo Tunnel 2 (Kub)
-    description: 'Argo Tunnel 2'
-    url: 'https://at2.goonernet.work/'
+  - id: Argo-Tunnel-1
+    name: Argo Tunnel 1 (Kub)
+    description: 'Argo Tunnel 1'
+    url: 'https://at1.nerdperv.net/'
     method: GET
     expectStatus: 200
     linkable: false # allows the title to be a link, default=true
@@ -52,7 +43,7 @@ monitors:
   - id: Argo-Tunnel-3
     name: Argo Tunnel 3 (SixtyFour)
     description: 'Argo Tunnel 3'
-    url: 'https://at3.goonernet.work/'
+    url: 'https://at3.nerdperv.net/'
     method: GET
     expectStatus: 200
     linkable: false # allows the title to be a link, default=true
