--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 settings:
-  title: 'wankmonkey.net • Network Status'
+  title: 'nerdperv.net • Network Status'
   url: 'https://ops-status.nerdperv.net' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
